# meadow-world-builder

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
assets/demos/: moss.ply  pikmin_b.ply  pikmin_light.ply  pikmin_p.ply  pikmin_r.ply  pikmin_y.ply  pikmin_y_seed42_fail.ply  pikmin_y_seed42_fail_v2.ply  toy_1.ply  toy_10.ply  toy_2.ply  toy_3.ply  toy_4.ply  toy_6.ply  toy_7.ply  toy_9.ply
assets/sample/: README.md
docs/: CHECKPOINT_REPORT.md  CONVERT_KEY_MAP.md  CUDA_DEPS.md  FINAL_BENCHMARK.md  MATH_OPTIMIZATION_OPPORTUNITIES.md  MOGE_RECON.md  MOTION_CAPTURE_FOR_ROBOTICS.md  PLUSH_EYES_FIX_REPORT.md  PORT_PLAN.md  PORT_PLAN_YONOSPLAT.md  PT_HIDDEN_MODES.md  QUALITY_SWEEP_V002.md  RECON_3D.md  RECON_DIT.md  RECON_PLAN.md  REPORT_IRIDESCENT_SHADER.md  REPORT_MULTI_VIEW_MERGE.md  RUNPOD_REFERENCE_PLAN.md  SPEC_DECODER.md  SPEC_DIT.md  SPEC_EMBED.md  SPEC_EVAL.md  SPEC_FAST_SAM3D.md  SPEC_INTEG.md  SPEC_LATENT_MAP.md  SPEC_LATENT_SHARE.md  SPEC_METAL_SPARSE.md  SPEC_MOGE_PORT.md  SPEC_MOGE_RECON.md  SPEC_SAMPLER.md  SPEC_SPARSE_WRAPPER.md  SPEC_SPZ_EXPORT.md  SPEC_VIEWER.md  YONOSPLAT_INTEGRATION_PLAN.md  YONOSPLAT_INTERFACE_CONTRACT.md
meadow3d/: infer.py
meadow3d/kernels/: sparse_subm_conv3d.py
meadow3d/models/: decoder_mlx.py  dit_mlx.py  embedders_mlx.py  latent_share_mlx.py  moge_mlx.py  pipeline_mlx.py  sampler_mlx.py  sparse_blocks_mlx.py
meadow3d/scripts/: convert_weights.py  eval_pipeline.py  ply_to_spz.py  ql_gif_pipeline.sh  render_ply.py
meadow3d/utils/: auto_mask.py  cache.py
meadow_inpaint_image/: .gitignore  README.md  SPEC.md  pyproject.toml
meadow_inpaint_image/lama_mlx/: __init__.py  cli.py  ffc.py  generator.py  inference.py
meadow_inpaint_image/media/: timing.json
meadow_inpaint_image/scripts/: _pt_helper.py  compare_pt_mlx.py  convert_weights.py  inpaint_cli.py  make_test_image.py
meadow_inpaint_image/tests/: test_ffc.py
meadow_inpaint_video/: .gitignore  PORT_BLOCKERS.md  README.md  SPEC.md  pyproject.toml
meadow_inpaint_video/media/: timing.json
meadow_inpaint_video/propainter_mlx/: __init__.py  decoder.py  deform_conv.py  encoder.py  feat_prop.py  flow_completion.py  propainter.py  raft.py  sparse_transformer.py
meadow_inpaint_video/scripts/: convert_weights.py  inpaint_video_cli.py
meadow_inpaint_video/tests/: test_e2e.py  test_e2e_full_pipeline.py  test_encoder_decoder.py  test_feat_prop.py  test_flow_completion.py  test_raft.py  test_sparse_transformer.py
meadow_sb/: BENCHMARK_YONOSPLAT.md  README.md
meadow_sb/models/: __init__.py  croco_decoder.py  dinov2_encoder.py  gaussian_adapter.py  heads.py  rasterizer.py  sub_decoders.py  yonosplat.py
meadow_sb/scripts/: convert_weights.py  e2e_test.py  infer_video.py  make_parallax_gif.py  ply_to_spz.py
meadow_sb/tests/: conftest.py  test_convert_weights.py  (+7 more)
meadow_wb/: infer.py
tests/: test_curvature_cache_integration.py  test_decoder.py  test_dit.py  test_embedders.py  test_latent_mapping.py  test_latent_share.py  test_moge.py  test_pipeline.py  test_sampler.py  test_sparse_blocks.py  test_sparse_subm_conv3d.py
web/: README.md  index.html  main.js
(+80 files in other folders)
