[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meadow-world-builder"
version = "0.0.1"
description = "Meadow - world builder: single-image 3D Gaussian Splatting on Apple Silicon (MLX)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Sheng-Kai Huang" }]
dependencies = [
    "mlx>=0.21.0",
    "numpy>=1.26",
    "Pillow>=10.2",
    "opencv-python>=4.9",
    "scipy>=1.12",
    "tqdm>=4.66",
    "einops>=0.7",
    "safetensors>=0.4",
    "plyfile>=1.0",
    "torch>=2.1",
    "huggingface_hub>=0.20",
]

[tool.setuptools.packages.find]
include = ["meadow_wb*"]
